# lingoqa_dataset

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
lingoqa_dataset/: lingoqa_dataset.py
tests/: test_dataset.py  test_evaluation.py
